style.css
* { 
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    box-sizing: border-box;
}
body { 
    background-color: black;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 900px;
}

.main-container { 
    height: 650px;
    background-color: rgb(14, 14, 14);
    padding: 10px;
    width: 450px;
    border-radius: 20px;
}
.display-container { 
    height: 80px;
    background-color: rgb(8, 8, 8);
    margin-bottom: 20px;
    border-radius: 20px;
    display: flex;  
    justify-content: flex-end;
    align-items: center;
   
}
.current-number-displayed { 
    font-size: 50px;
    padding-right: 40px;
    color: white;
   
}


.button-container { 
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    
}

.button-container button { 
    height: 80px;
    width: 80px;
    border-radius: 50px;
    margin: 10px;
    font-size: 25px;
    font-weight: 800;
    border: 0;
    background-color: rgb(14, 14, 14);
    border: 2px solid rgb(20, 20, 20);
    color: rgb(206, 206, 206);
}

#clear { 
    border: 5px solid rgba(255, 60, 0, 0.534);
}

#equals { 
    border: 5px solid rgba(0, 225, 255, 0.384);
    /*background-color: rgba(0, 225, 255, 0.301) ;*/
}

#equals:hover { 
    border: 0;
    background-color: rgba(0, 225, 255, 0.301);
    color: rgb(206, 206, 206);
}



#back { 
    /*
    background-color: rgb(14, 14, 14) ;
    border: 0;
    */
    font-size: 50px;
    padding-bottom: 17px;
}

#clear:hover { 
    background-color: rgba(255, 60, 0, 0.534);
    color: rgb(206, 206, 206);
    border: 0;
}
/*
#equals, #empty, #clear { 
    border: 0;
}
*/


button { 
    cursor: pointer;
}
button:hover { 
    background-color: rgb(218, 218, 218);
    color: black;
}

